[refactor] Refactored Java and Scala parts into seperate Maven Modules to avoid Scala compilation clash with Jenkins approach to resource package naming for Jelly resources